// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Buttons/IconButtons plain: Components/Buttons/IconButtons plain 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c5.c5 .c2,
.c5.c5 .c2 svg {
  font-size: 20px;
}

.c5.c5:hover .c2 {
  color: rgba(158,158,158,0.88);
}

.c5.c5:active .c2 {
  color: #9e9e9e;
}

.c5.c5.c5.c5.disabled .c2 {
  color: rgba(0,0,0,0.12);
}

.c6.c6 .c2,
.c6.c6 .c2 svg {
  font-size: 20px;
}

.c6.c6:hover .c2 {
  color: rgba(158,158,158,0.88);
}

.c6.c6:active .c2 {
  color: #9e9e9e;
}

.c6.c6.c6.c6.disabled .c2 {
  color: rgba(0,0,0,0.12);
}

.c1.c1 {
  padding: 0;
  width: 20px;
  height: 20px;
  color: #0684bd;
  opacity: 1;
  padding: 0;
  background-color: inherit;
}

.c1.c1 .c2,
.c1.c1 .c2 svg {
  font-size: 20px;
}

.c1.c1:hover {
  background-color: transparent;
}

.c1.c1:hover .c2 {
  color: rgba(6,132,189,0.88);
}

.c1.c1:active .c2 {
  color: #0684bd;
}

.c1.c1.c1.c1.disabled .c2 {
  color: rgba(0,0,0,0.12);
}

.c1.c1 .rippleVisible {
  color: #0684bd;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c0 .iconButtonWrapper {
  margin-right: 20px;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-describedby={null}
      aria-label="add"
      className="MuiButtonBase-root MuiIconButton-root iconButtonWrapper c1"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title={null}
      type="button"
      variant="plain"
    >
      <span
        className="MuiIconButton-label"
      >
        <span
          className="c2  icon c3"
          disabled={false}
          size="medium"
        >
          <svg
            className="c4"
            role="img"
          >
            <use
              href="#undefined"
              xlinkHref="#undefined"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Buttons/IconButtons round: Components/Buttons/IconButtons round 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c5.c5 .c2,
.c5.c5 .c2 svg {
  font-size: 20px;
}

.c5.c5:hover .c2 {
  color: rgba(158,158,158,0.88);
}

.c5.c5:active .c2 {
  color: #9e9e9e;
}

.c5.c5.c5.c5.disabled .c2 {
  color: rgba(0,0,0,0.12);
}

.c6.c6 .c2,
.c6.c6 .c2 svg {
  font-size: 20px;
}

.c6.c6:hover .c2 {
  color: rgba(158,158,158,0.88);
}

.c6.c6:active .c2 {
  color: #9e9e9e;
}

.c6.c6.c6.c6.disabled .c2 {
  color: rgba(0,0,0,0.12);
}

.c7.c7 .c2,
.c7.c7 .c2 svg {
  font-size: 20px;
}

.c7.c7:hover .c2 {
  color: rgba(6,132,189,0.88);
}

.c7.c7:active .c2 {
  color: #0684bd;
}

.c7.c7.c7.c7.disabled .c2 {
  color: rgba(0,0,0,0.12);
}

.c1.c1 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #0684bd;
  opacity: 1;
  padding: 0;
  background-color: inherit;
}

.c1.c1 .c2,
.c1.c1 .c2 svg {
  font-size: 20px;
}

.c1.c1:hover {
  background-color: rgba(6,132,189,0.12);
}

.c1.c1:hover .c2 {
  color: rgba(6,132,189,0.88);
}

.c1.c1:active .c2 {
  color: #0684bd;
}

.c1.c1.c1.c1.disabled .c2 {
  color: rgba(0,0,0,0.12);
}

.c1.c1 .rippleVisible {
  color: #0684bd;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c0 .iconButtonWrapper {
  margin-right: 20px;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-describedby={null}
      aria-label="I'm a star"
      className="MuiButtonBase-root MuiIconButton-root iconButtonWrapper c1"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title={null}
      type="button"
      variant="round"
    >
      <span
        className="MuiIconButton-label"
      >
        <span
          className="c2  icon c3"
          disabled={false}
          size="medium"
        >
          <svg
            className="c4"
            role="img"
          >
            <use
              href="#undefined"
              xlinkHref="#undefined"
            />
          </svg>
        </span>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
